--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -1,8 +1,92 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Tutorial - Python 101\n",
+    "\n",
+    "In this tutorial, we are going through basic elements of python including\n",
+    "- Variable,\n",
+    "- Data Structure,\n",
+    "- Loop and Condition,\n",
+    "- File I/O\n",
+    "- OOP etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is Python?\n",
+    "\n",
+    "From [wikipedia](https://en.wikipedia.org/wiki/Python_%28programming_language%29),\n",
+    "\n",
+    "_Python is an interpreted high-level programming language for general-purpose programming. \n",
+    "Created by Guido van Rossum and first released in 1991, Python has a design philosophy that emphasizes code readability, notably using significant whitespace. It provides constructs that enable clear programming on both small and large scales._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting Python\n",
+    "\n",
+    "\n",
+    "In windows, getting python and jupoyter is easy.\n",
+    "\n",
+    "\n",
+    "- Go to https://www.anaconda.com/download/\n",
+    "![Anaconda](anaconda.PNG)\n",
+    "- Download https://repo.continuum.io/archive/Anaconda3-5.1.0-Windows-x86_64.exe\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Opening Jupyter\n",
+    "\n",
+    "- Windows -> Type here to search -> Type \"Anaconda\"\n",
+    "\n",
+    "![startup](start_menu.PNG)\n",
+    "\n",
+    "- Type `jupyter notebook` in terminal\n",
+    "- Go to \"http://localhost:8888/\" in web browser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A little Introduction to Jupyter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From [Jupyter](http://jupyter.org/index.html)\n",
+    "\n",
+    "_The Jupyter Notebook is an open-source web application that allows you to create and share documents that contain live code, equations, visualizations and narrative text. Uses include: data cleaning and transformation, numerical simulation, statistical modeling, data visualization, machine learning, and much more._\n",
+    "\n",
+    "<div style=\"width: 50%;\">\n",
+    "![Jupyter](http://jupyter.org/assets/jupyterpreview.png)\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Playground"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +105,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Syntax"
+    "# Basic Syntax\n",
+    "## Hello World!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Type\n",
+    "\n",
+    "Python has the following built-in data types.\n",
+    "\n",
+    "- `bool`,\n",
+    "- `int`, `float`, `complex`\n",
+    "- `list`, `tuple`, `range`\n",
+    "- `str`,\n",
+    "- `dict`, `set`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1234\n",
+      "Hello World\n",
+      "[1, 'asdf']\n",
+      "{'Hello': 'World'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True)\n",
+    "print(1234)\n",
+    "print(\"Hello World\")\n",
+    "print([1, \"asdf\"])\n",
+    "print({\"Hello\": \"World\"})"
    ]
   },
   {
