--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -111,19 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\n"
+      "Hello World!\n",
+      "Hello World, 2018-04-02\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "print(\"Hello World!\")\n",
+    "print(\"Hello World, %d-%.2d-%.2d\" % (2018, 4, 2)) #Formatted Output"
    ]
   },
   {
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
        "9"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,42 +227,340 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Structure (List)"
+    "## Data Structure (List)\n",
+    "\n",
+    "List is one of the most fundamental data structures in Python. Just like array in other programming languages, a list contains elements in a fixed order and each element can be accessed via an index. Note that, Python's list is zero-based array and therefore the index of the first element is always *zero*. Also, elements can be in different data types. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ada', 'Bella', 'Connie']\n",
+      "3\n",
+      "Donna in the list? True\n",
+      "['Ada', 'Bella', 'Connie', 'Donna']\n",
+      "['Bella', 'Connie', 'Donna']\n",
+      "['Ada', 'Bella', 'Connie', 'Donna']\n",
+      "Donna\n",
+      "['Donna', 'Connie', 'Bella', 'Ada']\n",
+      "['Ada', 'Bella', 'Connie', 'Donna']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Ada\", \"Bella\", \"Connie\"]\n",
+    "print(names)\n",
+    "print(len(names))\n",
+    "names.append(\"Donna\")\n",
+    "print(\"Donna in the list? %s\" % (\"Donna\" in names))\n",
+    "print(names)\n",
+    "names.remove(\"Ada\")\n",
+    "print(names)\n",
+    "names = [\"Ada\"] + names\n",
+    "print(names)\n",
+    "print(max(names))\n",
+    "names.reverse()\n",
+    "print(names)\n",
+    "names.sort()\n",
+    "print(names)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Structure (Dict)"
+    "## Data Structure (Dict)\n",
+    "Dict is an associative array or a hashtable in Python. Each item in a dict contains two properties, `key` and `value`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Hello', 'World', 'CityU'])\n",
+      "1\n",
+      "1\n",
+      "{'World': 3, 'CityU': -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "counters = {\n",
+    "    \"Hello\": 1,\n",
+    "    \"World\": 3,\n",
+    "    \"CityU\": -1,\n",
+    "}\n",
+    "print(counters.keys())\n",
+    "print(counters[\"Hello\"])\n",
+    "print(counters.get(\"Not found\", 1))\n",
+    "del counters[\"Hello\"]\n",
+    "print(counters)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Condition"
+    "## Condition\n",
+    "Python has `if` statement, just like any other languages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Tom\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Tom\"\n",
+    "region = \"Hong Kong\"\n",
+    "if name == \"Tom\":\n",
+    "    if region == \"Hong Kong\":\n",
+    "        print(\"Hello, Tom\")\n",
+    "    elif region == \"Japan\":\n",
+    "        print(\"Konnichiwa\")\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modules & Import"
+    "## Looping\n",
+    "There are two kinds of loops in Python.\n",
+    "\n",
+    "1. For-Loop\n",
+    "2. While-Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [\"A\", \"B\", \"C\", \"D\", \"E\"]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File I/O"
+    "# Indentation Matters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Looping"
+    "Python interpreter enforces indentation so that code would be beautiful. Make sure you don't mix up tab with space character."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-88-d3cc6677e445>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-88-d3cc6677e445>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(i)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 100):\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If indentation has a problem. Python does **not** run your program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modules & Import\n",
+    "You can use a library both built-in or 3rd party when programming.\n",
+    "\n",
+    "For example,\n",
+    "\n",
+    "```python\n",
+    "import datetime\n",
+    "```\n",
+    "\n",
+    "and\n",
+    "\n",
+    "```python\n",
+    "from datetime import datetime\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b10a8db164e0754105b7a99be72e3fe5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hashlib\n",
+    "md5 = hashlib.md5()\n",
+    "md5.update(\"Hello World\".encode())\n",
+    "print(md5.hexdigest())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## File I/O\n",
+    "File operation in Python is simple. In most of the time, you just need to stick with `open` function. `open` takes two parameters, the first parameter is the file path (either absoulte or relative) and the second parameter is the file mode. Mode can be\n",
+    "1. \"r\" (read), \n",
+    "2. \"w\" (write), \n",
+    "3. \"a\" (append),\n",
+    "4. \"b\" (binary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line=[歡迎光臨香港城市大學（城大）。城大是一所充滿朝氣的大學，其地理位置獨特，位於香港這個東西方匯集的亞洲國際都會的中心。城大的目標是追求卓越、促進創新、培育創意，造福社會和服務全球。我們的願景是成為專業教育出眾的亞洲一流學府，推動不同文化及知識傳統的交流與相互增長，為人類福祉做出貢獻。]\n",
+      "line=[]\n",
+      "line=[城大於1994年成為大學，目前共有七個學院：商學院、人文社會科學院、科學及工程學院、動物醫學及生命科學院、創意媒體學院、能源及環境學院、法律學院。動物醫學及生命科學院與世界領先的美國康奈爾大學動物醫學院合作，於2017–18學年推出香港首個獸醫學學士課程。我們主張，專業教育應全面推行教研合一，課程設計旨在促進知識創造、]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"lines.txt\", \"r\")\n",
+    "lines = f.readlines()\n",
+    "for line in lines:\n",
+    "    print(\"line=[%s]\" % line.strip())\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "f = open(\"a.json\", \"w\")\n",
+    "f.write(json.dumps({\"Hello\": \"World\"}))\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closing a File\n",
+    "Either you call `close` by the end of program or use `with` statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"a.json\", \"w\") as f:\n",
+    "    f.write(json.dumps({\"Hello\": \"World\"}))"
    ]
   },
   {
@@ -271,11 +571,258 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "def triple(x):\n",
+    "    return x * x * x\n",
+    "\n",
+    "print(triple(3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class / OOP"
+    "### Default Parameter\n",
+    "A function parameter can have a default value. You can call a function without assigning parameters if a parameter has a default value.\n",
+    "\n",
+    "### Function with no return value\n",
+    "A `return` statement is not mandatory in a function call. In this case, `None` will be returned."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Hello World\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n",
+      "Empty Message\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_all(message=\"Empty Message\"):\n",
+    "    for i in range(0, 10):\n",
+    "        print(message)\n",
+    "\n",
+    "print_all(\"Hello World\")\n",
+    "print_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class / OOP\n",
+    "\n",
+    "Python supports class which we can put both data and method into a single place. Each object is called an instance, an instance contains its own properties or state meanwhile each instance contains methods to modify and read its properties. The following is a simple class example in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Message:\n",
+    "    def __init__(self, body):\n",
+    "        self.body = body\n",
+    "        \n",
+    "    def output(self):\n",
+    "        print(self.body)\n",
+    "        \n",
+    "a_message = Message(\"Hello World\")\n",
+    "a_message.output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Private Variable\n",
+    "\n",
+    "Python class supports private variable by prepending `__` before the property's name. For example,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to CityU.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MessagePrivate' object has no attribute '__body'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-919f09b0bdd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mb_message\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMessagePrivate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Welcome to CityU.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbody\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__body\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MessagePrivate' object has no attribute '__body'"
+     ]
+    }
+   ],
+   "source": [
+    "class MessagePrivate:\n",
+    "    def __init__(self, body):\n",
+    "        self.__body = body\n",
+    "        self.body = body\n",
+    "        \n",
+    "    def output(self):\n",
+    "        print(self.__body)\n",
+    "b_message = MessagePrivate(\"Welcome to CityU.\")\n",
+    "print(b_message.body)\n",
+    "print(b_message.__body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`__body` cannot be accessed outsude of `b_message` while `body` can be."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance\n",
+    "Python class provides inheritance in both constructor and method call via calling `super`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am Ho Wa in Computer Science.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.cnt = 0\n",
+    "\n",
+    "    def inc(self):\n",
+    "        self.cnt += 1\n",
+    "        \n",
+    "class Student(Person):\n",
+    "    def __init__(self, name, dept):\n",
+    "        super().__init__(name)\n",
+    "        self.dept = dept\n",
+    "        \n",
+    "    def output(self):\n",
+    "        print(\"I am %s in %s.\" % (self.name, self.dept))\n",
+    "\n",
+    "s = Student(\"Ho Wa\", \"Computer Science\")\n",
+    "s.output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Student` inherits from `Person` that `Student` has `name` property from `Person` and its own property `dept`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Static Method\n",
+    "\n",
+    "In Python, a class can also have static method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the new message: [Hello World]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Helper:\n",
+    "    @staticmethod\n",
+    "    def process_message(body):\n",
+    "        return \"This is the new message: [%s]\" % (body)\n",
+    "\n",
+    "print(Helper.process_message(\"Hello World\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Duck Typing\n",
+    "Python supports *duck typing*, a type only matters in runtime. For example, I can put both `Message` and `MessagePrivate` into arr "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
