Update duck typing execution

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -814,15 +814,28 @@
    "metadata": {},
    "source": [
     "## Duck Typing\n",
-    "Python supports *duck typing*, a type only matters in runtime. For example, I can put both `Message` and `MessagePrivate` into arr "
+    "Python supports *duck typing*, a type only matters in runtime. For example, I can put both `Message` and `MessagePrivate` into an array and call `output`. But actually, these two classes do not share any interface or inheritance. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 1\n",
+      "Hello2\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages = [Message(\"Hello 1\"), MessagePrivate(\"Hello2\")]\n",
+    "for message in messages:\n",
+    "    message.output()"
+   ]
   }
  ],
  "metadata": {
